kubernetes/base/media-server/bases/jellyseerr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  labels:
    project: media-server
    component: jellyseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      project: media-server
      component: jellyseerr
  template:
    metadata:
      labels:
        project: media-server
        component: jellyseerr
    spec:
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:1.7.0
          ports:
            - name: http
              containerPort: 5055
          volumeMounts:
            - mountPath: /app/config
              name: jellyseerr-config-do-block
      volumes:
        - name: jellyseerr-config-do-block
          persistentVolumeClaim:
            claimName: jellyseerr-config-do-block
