kubernetes/base/media-server/bases/jellyseerr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  labels:
    project: media-server
    component: jellyseerr
spec:
  selector:
    project: media-server
    component: jellyseerr
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
